tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/gateway/client_protocol_-_http1_use_client_with_http/to_b/_test_context/Gateway-VirtualService-DestinationRule.2213891217.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: echo-2-88348
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: b.echo-2-88348.svc.cluster.local
  namespace: echo-2-88348
spec:
  gateways:
  - gateway
  hosts:
  - b.echo-2-88348.svc.cluster.local
  http:
  - route:
    - destination:
        host: b.echo-2-88348.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: use-client-protocol
  namespace: echo-2-88348
spec:
  host: b.echo-2-88348.svc.cluster.local
  trafficPolicy:
    connectionPool:
      http:
        useClientProtocol: true
    tls:
      mode: DISABLE
